--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,3 +1,4 @@
+# .github/workflows/ci.yml
 name: ci
 on: [push, pull_request]
 jobs:
@@ -9,4 +10,7 @@ jobs:
         with:
           python-version: '3.11'
       - run: pip install -r requirements.txt pytest
-      - run: pytest -q
+      - name: Run tests
+        run: |
+          export PYTHONPATH=$PWD
+          pytest -q
